Change Infermedica API credentials
Updated API credentials for Infermedica.

--- a/medical_diagnosis.ipynb
+++ b/medical_diagnosis.ipynb
@@ -64,9 +64,9 @@
     "import os\n",
     "\n",
     "# Replace with your Infermedica API credentials\n",
-    "APP_ID = \"22851580\"\n",
-    "APP_KEY = \"6bc2d4a7f7f7a3a2aca78ea194b9dce5\"\n",
-    "API_URL = \"https://api.infermedica.com/v3/\"\n",
+    "APP_ID = \"n",
+    "APP_KEY = \""\n",
+    "API_URL = \""\n",
     "\n",
     "def save_medical_history(medical_history, username):\n",
     "    \"\"\"\n",
