Update API credentials placeholders in notebook

--- a/medical_diagnosis.ipynb
+++ b/medical_diagnosis.ipynb
@@ -64,9 +64,9 @@
     "import os\n",
     "\n",
     "# Replace with your Infermedica API credentials\n",
-    "APP_ID = \"n",
-    "APP_KEY = \""\n",
-    "API_URL = \""\n",
+    "APP_ID = "",
+    "APP_KEY = "",
+    "API_URL = "",
     "\n",
     "def save_medical_history(medical_history, username):\n",
     "    \"\"\"\n",
